--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -440,6 +440,12 @@
     <Compile Include="pages\dockWindow\frmDemo.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="pages\dockWindow\tools\AdjustParameters.Designer.vb">
+      <DependentUpon>AdjustParameters.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\dockWindow\tools\AdjustParameters.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="pages\dockWindow\tools\TaskUI.vb" />
     <Compile Include="pages\dockWindow\tools\TaskListWindow.Designer.vb">
       <DependentUpon>TaskListWindow.vb</DependentUpon>
@@ -734,6 +740,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\frmVideoList.resx">
       <DependentUpon>frmVideoList.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\dockWindow\tools\AdjustParameters.resx">
+      <DependentUpon>AdjustParameters.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\tools\OutputWindow.resx">
       <DependentUpon>OutputWindow.vb</DependentUpon>
